--- a/project3/Recommendations_with_IBM_YG.ipynb
+++ b/project3/Recommendations_with_IBM_YG.ipynb
@@ -2472,11 +2472,11 @@
    "source": [
     "**Your response here.**\n",
     "\n",
-    "We observe that we have an increasing training accuracy untill around 300 latent features and then the increase is marginal. In the same time the testing accuracy remains above 0.93 while increasing the latent features. The F1_score is a better indicator and in this case the training F1_score also drasticly reduce to increase around 300 latent features. The F1_score on the other and remains very low with a maximum of 0.131 at 90 latent features.\n",
+    "We observe that we have an increasing training accuracy until around 300 latent features and then the increase is marginal. At the same time, the testing accuracy remains above 0.93 while increasing the latent features. The F1_score is a better indicator and in this case, the training F1_score also drastically reduces to increase around 300 latent features. The F1_score on the other hand remains very low with a maximum of 0.131 at 90 latent features.\n",
     "\n",
-    "The main problem in with this method for this dataset is that we have a very low number of users (20) for which we can make predictions. A larger dataset should enable to improve the results. and also the classes are very unbalanced and the accuracy poorly represents the ability to correcly predict if the user saw a movie or not.\n",
+    "The main problem with this method for this dataset is that we have a very low number of users (20) for which we can make predictions. A larger dataset should enable to improvement the results. and also the classes are very unbalanced and the accuracy poorly represents the ability to correctly predict if the user saw a movie or not.\n",
     "\n",
-    "For me, as I disscussed before, I will try to use some reinforcement learning algorithms or other ML methods to have a try. Users behavior and taste could change during times, and the lack of history data is the problem what we always faced to. So perhaps if we model such a system as a game of searching and apply even multi-bandit or e-greedy algorithm, the result could be improved."
+    "For me, as I discussed in the project, I will try to use some reinforcement learning algorithms or other ML methods to have a try. Users' behavior and taste could change over time, and the lack of historical data is a problem that we always faced to. So perhaps if we model such a system as a game of searching and apply even a multi-bandit or e-greedy algorithm, the result could be improved."
    ]
   },
   {
@@ -2537,7 +2537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2551,7 +2551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
